Bug 1141579 - Synchronize access to warmUpCount; r=jandem